# SiNDAE

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  environment.yml  myst.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml  python-publish.yml
binder/: environment.yml  postBuild
docs/: _config.yml  _toc.yml  decomposition_solver.md  generate_api.py  hybrid_dae_overview.md  index.md  installation.md  quickstart.md  references.bib  requirements.txt  simultaneous_solver.md
docs/api/: data_utils.md  decomp.md  hybrid_dae.md  index.md  inference.md  network_architecture.md  nn_utils.md  pretrain.md  problem.md  simultaneous.md  smoother.md  solvers.md
docs/api/_generated/: data_utils.md  decomp.md  hybrid_dae.md  inference.md  nn_utils.md  pretrain.md  problem.md  simultaneous.md  smoother.md  solvers.md
docs/examples_gallery/: fedbatch_example.ipynb  fedbatch_measurements.csv  fedbatch_partial_obs_example.ipynb  fedbatch_validation_example.ipynb  fedbatch_validation_measurements.csv  four_tank_example.ipynb  generate_fedbatch_data.py  generate_fedbatch_validation_data.py  index.md  leslie_gower_example.ipynb
examples/: example_mpi.py  fedbatch.py  four_tank.py  leslie_gower.py
sindae/: __init__.py  data_utils.py  example_problems.py  hybrid_dae.py  nn_utils.py  plot_utils.py  problem.py  solvers.py
sindae/algorithms/: inference.py  model_builder_utils.py  pretrain.py  smoother.py  timing_utils.py
sindae/algorithms/decomp/: kkt_utils.py  model_builder.py  nn_gbm.py  subproblem.py  train.py
sindae/algorithms/simultaneous/: gbm.py  model_builder.py  nn_block.py  train.py
sindae/interfaces/: __init__.py  feral_interface.py  interior_point_compat.py  pounce_interface.py  pyomo_grey_box_nlp_extended.py
tests/: conftest.py  test_decomp_kkt_symbolic_refresh.py  test_decomp_objective_consistency.py  test_feral_interface.py  test_hybrid_dae.py  test_pounce_grey_box.py  test_pounce_ipopt_swapin.py  test_smoke.py  test_solvers.py
tests/end-to-end/: test_linear_solver_swapins_inference.py  test_linear_solver_swapins_train.py  test_pounce_cyipopt_grey_box.py  test_pounce_ipopt_swapin_train.py  test_pounce_ipopt_swapins_inference.py  test_solver_scalability.py
