[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sindae"
version = "0.1.0"
description = "Learning unknown nonlinear terms in ODE/DAE systems via implicit differentiation"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Laurens Lueg", email = "llueg@andrew.cmu.edu" },
]
keywords = ["scientific machine learning", "neural ODE", "DAE", "implicit differentiation", "UDE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "equinox>=0.11",
    "optax>=0.2",
    "pyomo>=6.7",
    "pounce-solver>=0.4",
    "feral-solver>=0.9",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
# Full install includes cyipopt (needed for decomp, GBM simultaneous, inference).
# conda install is preferred — cyipopt from conda-forge bundles IPOPT+MUMPS.
# pip wheels for cyipopt are platform-dependent; MPI requires a system install.
full = [
    "cyipopt>=1.4",
    "mpi4py>=3.1",
]

[tool.setuptools.packages.find]
include = ["sindae*"]
