[build-system]
# >=77 for PEP 639 SPDX `license`/`license-files` support (the form used below).
# Older setuptools errors on that metadata, which breaks `pip install` in
# build-isolated environments like Binder/repo2docker.
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "sindae"
version = "0.0.1"
description = "A package to learn unknown nonlinear terms in ODE/DAE systems via ML models and implicit differentiation"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [
    { name = "Laurens Lueg", email = "llueg@andrew.cmu.edu" },
]
maintainers = [
    { name = "Nicolas Smits", email = "nsmits@andrew.cmu.edu" },
]
keywords = ["scientific machine learning", "neural ODE", "DAE", "implicit differentiation", "UDE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "equinox>=0.11",
    "optax>=0.2",
    "pyomo>=6.7",
    "pounce-solver>=0.4",
    "feral-solver>=0.9",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
# Full install includes cyipopt (needed for decomp, GBM simultaneous, inference).
# conda install is preferred
# pip wheels for cyipopt are platform-dependent; MPI requires a system install.
full = [
    "cyipopt>=1.4",
    "mpi4py>=3.1",
]
test = [
    "pytest>=7",
]

[tool.setuptools.packages.find]
include = ["sindae*"]

[project.urls]
Homepage = "https://github.com/llueg/SiNDAE"
Documentation = "[TODO: Add real documentation link]"
Issues = "https://github.com/llueg/SiNDAE/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: long-running end-to-end and scalability tests (deselect with -m 'not slow')",
]
