[build-system]
# >=77 for PEP 639 SPDX `license`/`license-files` support (the form used below).
# Older setuptools errors on that metadata, which breaks `pip install` in
# build-isolated environments like Binder/repo2docker.
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "sindae"
version = "0.1.0"
description = "A package to learn unknown nonlinear terms in ODE/DAE systems via ML models and implicit differentiation"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [
    { name = "Laurens Lueg", email = "llueg@andrew.cmu.edu" },
]
maintainers = [
    { name = "Nicolas Smits", email = "nsmits@andrew.cmu.edu" },
]
keywords = ["scientific machine learning", "neural ODE", "DAE", "implicit differentiation", "UDE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "equinox>=0.11",
    "optax>=0.2",
    "pyomo>=6.7",
    "pounce-solver>=0.4",
    "feral-solver>=0.9",
    "matplotlib>=3.7",
    "jax2onnx>=0.14.1"
]

[project.optional-dependencies]
# Full install includes cyipopt (needed for decomp, GBM simultaneous, inference).
# conda install is preferred
# pip wheels for cyipopt are platform-dependent; MPI requires a system install.
full = [
    "cyipopt>=1.4",
    "mpi4py>=3.1",
]
test = [
    "pytest>=7",
]
# Developer tooling. `pre-commit` manages the ruff hook (see
# .pre-commit-config.yaml); ruff itself is fetched by pre-commit, not pinned here.
dev = [
    "pre-commit>=3",
]

[tool.setuptools.packages.find]
include = ["sindae*"]

[project.urls]
Homepage = "https://github.com/llueg/SiNDAE"
Documentation = "https://llueg.github.io/SiNDAE"
Issues = "https://github.com/llueg/SiNDAE/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: long-running end-to-end and scalability tests (deselect with -m 'not slow')",
]

[tool.ruff.lint.per-file-ignores]
# Package __init__ files deliberately re-export public API names, so their
# imports read as "unused" (F401) to the linter. This is intentional.
"__init__.py" = ["F401"]
